# rust-shiori

./: .gitattributes  Cargo.toml  todo.txt
experiments/: architecture.gv
experiments/lang/: lang.lua  langlib.lua
experiments/obj_ss/: color.lua  obj.lua  sakura.lua  set.lua
experiments/test/: niko_menu.lua
rust-shiori/: Cargo.toml
rust-shiori-lua/: Cargo.toml  build.rs
rust-shiori-lua/docs/: concepts.md  script_api.md
rust-shiori-lua/lua/: eris.c  eris.h  lbaselib.c  ldblib.c  ldebug.c  lfunc.c  lobject.h  loslib.c  luaconf.h  lvm.c  utf8_wrappers.c  utf8_wrappers.h
rust-shiori-lua/src/: config.rs  default.toml  eris.rs  error.rs  lib.rs  os_str.rs  persistent.rs  runtime.lua
rust-shiori-lua/src/lib/: events.lua  fstring.lua  logger.lua  persistent.lua  sakura.lua  utils.lua
rust-shiori-lua/src/lib/script/: dtags.lua  init.lua  interpolate.lua
rust-shiori-lua/src/lib/shiori/: dialect.lua  events.lua  init.lua  input.lua  interface.lua  script.lua
rust-shiori-lua/src/lib/shiori/interface/: init.lua  input.lua
rust-shiori-lua/src/lua/: runtime.lua  shiori.lua
rust-shiori-lua/src/rt/: fstring.lua  lang.lua  langlib.lua  runtime.lua  sakura.lua  shiori.lua  utils.lua
rust-shiori-macros/: Cargo.toml
rust-shiori-macros/src/: lib.rs
rust-shiori/src/: internals.rs  lib.rs  response.rs
rust-shiori/src/request/: mod.rs  typed.rs
rust-shiori/src/sakura/: mod.rs
sandbox/: README.md
sandbox/test/: default_preproc.lua  niko_menu.lua
src/: internals.rs  lib.rs  request.rs  response.rs
src/request/: mod.rs  typed.rs
