[package]
name = "rust-shiori-lua"
version = "0.1.0"
authors = ["AlphaModder"]
edition = "2018"

[dependencies]
rust-shiori = { path = "../rust-shiori/" }
rlua = { version ="0.15", default-features = false }
config = "0.9"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.2"

[build-dependencies]
cc = { version = "1.0" }

[lib]
crate-type = ["cdylib"]
