[package]
name = "rust-shiori-lua"
version = "0.1.0"
authors = ["AlphaModder"]
edition = "2018"
publish = false # for now

[dependencies]
rust-shiori = { path = "../rust-shiori/", default-features = false }
rlua = { version = "0.16", default-features = false }
config = "0.9"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.2"
simplelog = "0.5.3"
log = "0.4.6"

[build-dependencies]
cc = { version = "1.0" }

[lib]
crate-type = ["cdylib"]
