[package]
name = "rust-shiori-lua"
version = "0.1.0"
authors = ["AlphaModder"]
edition = "2018"
publish = false # for now

[dependencies]
rust-shiori = { path = "../rust-shiori/", default-features = false }
serde = { version = "1.0", features = ["derive"] }
rlua = { version = "0.16", default-features = false }
config = "0.9"
log = { version = "0.4.6", features = ["serde"] }
simplelog = "0.5.3"

[build-dependencies]
cc = { version = "1.0" }

[lib]
crate-type = ["cdylib"]
