[package]
name = "rust-shiori"
version = "0.1.0"
authors = ["AlphaModder"]
edition = "2018"
publish = false # for now

[dependencies]
winapi = { version = "0.3", features = ["minwindef", "winbase"] }
regex = "1.0"
lazy_static = "1.0"
rust-shiori-macros = { path = "../rust-shiori-macros", optional = true }
shiori_hglobal = "0.3.0" # thanks ekicyou!
log = "0.4.6"

[features]
default = ["typed_request"]
typed_request = ["rust-shiori-macros"]